# django-local-read-write-replica

./: .coveragerc  .env  .gitignore  Dockerfile  DockerfileDev  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  setup.cfg  start.sh  tox.ini
django_local_read_write_replica/: asgi.py  settings.py  urls.py  wsgi.py
django_local_read_write_replica/apps/my_app/: apps.py  models.py
django_local_read_write_replica/apps/my_app/drf/: serializers.py  views.py
django_local_read_write_replica/apps/my_app/management/commands/: seed_db.py
django_local_read_write_replica/apps/my_app/migrations/: 0001_initial.py
django_local_read_write_replica/support/: db_router.py  utils.py
tests/: test_init.py
tests/integration/apps/my_app/drf/: test_message.py
