[tool.poetry]
name = "django-local-read-write-replica"
version = "0.1.0"
description = "A simple django project with read/write db replica"
authors = ["Lucas Gigek <lucasgigek@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.7"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
